// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled() API should be able to override styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0 {
  display: block;
}

.c0 {
  color: var(--black-color);
}

@media (min-width:980px) {

}

@media (max-width:979px) {

}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`styled() API should pass styles from styled 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0 {
  display: block;
}

.c0 {
  color: rgba(var(--clear-color-rgb),0.1);
}

@media (min-width:980px) {

}

@media (max-width:979px) {

}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`styled() API should warn about deprecated API 1`] = `
Array [
  Array [
    "CubeUIKit:",
    "\\"props\\" is deprecated, consider better alternative: inline props directly in styled(), eg: styled({ type: 'confirm' })",
  ],
]
`;
